# simplebot

./: CHANGELOG.md  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.md  README.rst  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-ci.yml
doc/: conf.py
examples/: admin.py  deltachat_api.py  dynamic.py  filter_priority.py  hooks.py  impersonating.py  quote_reply.py  send_file.py
examples/simplebot_echo/: CHANGELOG.rst  README.rst  setup.cfg  simplebot_echo.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
scripts/: create_service.py
simplebot/: deltabot.py
src/deltabot/: __init__.py  bot.py  commands.py  filters.py  hookspec.py  plugins.py
src/deltabot/builtin/: admin.py  cmdline.py  db.py
src/simplebot/: __init__.py  __main__.py  bot.py  commands.py  filters.py  hookspec.py  main.py  parser.py  plugins.py  pytestplugin.py  utils.py
src/simplebot/builtin/: admin.py  cmdline.py  db.py  log.py  settings.py
src/simplebot/templates/: __init__.py  help.j2
tests/: test_cmdline.py  test_commands.py  test_deltabot.py  test_filters.py  test_parser.py  test_plugins.py
